Use String.formatted for error message
Replace String.format call with String.formatted to simplify and compact the exception construction when an invalid HTTP status code is encountered. This is a stylistic change only and does not alter behavior or message content.