@@ -30,9 +30,7 @@ public final class CheckService {
         var statusCode = response.getStatus();
 
         if (statusCode < HttpStatus.OK.getCode() || statusCode >= HttpStatus.MULTIPLE_CHOICES.getCode()) {
-            throw new NotFoundResponse(
-                    String.format("Invalid status code: %d", statusCode)
-            );
+                throw new NotFoundResponse("Invalid status code: %d".formatted(statusCode));
         }
 
         var body = response.getBody();
